# chess

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  arena.cpp  chess_weights.pth  dataset_generator  engine.c  engine_nnue  export_weights.py  generate_data.c  play.c  play_chess  rl_model.py  run_rl.sh  selfplay.cpp  train.py  train_rl.py
